--- a/Dockerfile.dashboard
+++ b/Dockerfile.dashboard
@@ -5,19 +5,19 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Install dependencies
+# Install curl for health check and dependencies
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
+# Install Python dependencies
 RUN pip install --no-cache-dir flask gunicorn supabase python-dotenv requests
 
 # Copy dashboard files
 COPY HonoraLocalTTS/tts_dashboard.py .
 COPY HonoraLocalTTS/templates templates/
 
-# Expose port
+# Railway uses $PORT env var
+ENV PORT=5000
 EXPOSE 5000
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:5000/health || exit 1
-
-# Run with gunicorn
-CMD ["gunicorn", "--bind", "0.0.0.0:5000", "--workers", "2", "--timeout", "120", "tts_dashboard:app"]
+# Run with gunicorn - use shell form to expand $PORT
+CMD gunicorn --bind 0.0.0.0:$PORT --workers 2 --timeout 120 tts_dashboard:app
