--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ fastapi
 uvicorn[standard]
 pymupdf
 python-multipart
-openai>=1.0.0
 supabase
 Pillow
 requests
+google-generativeai>=0.8.0
 google-genai>=0.5.0
 spacy>=3.7.0
