--- a/HonoraLocalTTS/Dockerfile.runpod
+++ b/HonoraLocalTTS/Dockerfile.runpod
@@ -13,14 +13,15 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
-COPY requirements_runpod.txt requirements.txt
+# Note: Paths are relative to repo root since RunPod builds from there
+COPY HonoraLocalTTS/requirements_runpod.txt requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Pre-download XTTS model (faster cold starts)
 RUN python -c "from TTS.api import TTS; TTS('tts_models/multilingual/multi-dataset/xtts_v2')" || true
 
 # Copy handler
-COPY runpod_handler.py /handler.py
+COPY HonoraLocalTTS/runpod_handler.py /handler.py
 
 # Run handler
 CMD ["python", "-u", "/handler.py"]
