--- a/HonoraLocalTTS/requirements_runpod.txt
+++ b/HonoraLocalTTS/requirements_runpod.txt
@@ -1,6 +1,7 @@
 # RunPod GPU Worker Dependencies
-# TTS package with specific compatible version
-TTS==0.22.0
+# TTS with compatible transformers version
+TTS>=0.21.0,<0.23.0
+transformers>=4.33.0,<4.40.0
 supabase>=2.0.0
 requests>=2.31.0
 runpod>=1.6.0
