Production fix: RunPod TTS integration v3
- Handler: VERSION proof in all responses
- Handler: Backward compatible (simple + batch mode)
- Handler: voice_url architecture (no multi-MB Base64)
- Handler: Voice caching + crash hardening
- Client: Retries, timeouts, request_id correlation
- Docs: RUNPOD_DEPLOYMENT.md

--- a/HonoraLocalTTS/Dockerfile.runpod
+++ b/HonoraLocalTTS/Dockerfile.runpod
@@ -1,7 +1,15 @@
 # RunPod GPU Worker Dockerfile
 # XTTS v2 with CUDA support
+# Handler Version: simple_mode_v3
+
+ARG GIT_SHA=unknown
+ARG BUILD_TIME=unknown
 
 FROM runpod/pytorch:2.1.0-py3.10-cuda11.8.0-devel-ubuntu22.04
+
+# Pass build args as env vars for runtime access
+ENV GIT_SHA=${GIT_SHA}
+ENV BUILD_TIME=${BUILD_TIME}
 
 WORKDIR /app
 
@@ -26,6 +34,9 @@ RUN python -c "from TTS.api import TTS; TTS('tts_models/multilingual/multi-datas
 
 # Copy handler
 COPY HonoraLocalTTS/runpod_handler.py /handler.py
+
+# Create voice cache directory
+RUN mkdir -p /tmp/honora_voice_cache
 
 # Run handler
 CMD ["python", "-u", "/handler.py"]
